cabal-version: 3.0
name:          stxlib
version:       0.0.0.0
license:       MIT
author:        David Janssen
maintainer:    janssen.dhj@gmail.com
build-type:    Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  StxLib
    other:            Init
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
